--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
