--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.24.1",
     "npm-install-webpack-plugin": "^3.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
