--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "normalize.css": "^5.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
