--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-scripts": "0.9.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "normalize.css": "^5.0.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
