--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "firebase": "^3.6.10",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "normalize.css": "^5.0.0",
@@ -13,6 +14,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.1",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
