--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.2",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
